# data-portability-api-mocker

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
configuration/: base.yml  load.yml
src/: main.rs  types.rs
